--- a/AndroidUIDemo/src/main/res/layout/main.xml
+++ b/AndroidUIDemo/src/main/res/layout/main.xml
@@ -1,65 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:background="@color/lt_grey"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:baselineAligned="false">
+<LinearLayout android:id="@+id/root"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/lt_grey"
+              android:baselineAligned="false"
+              android:gravity="center_horizontal"
+              android:orientation="vertical">
 
-  <com.oreilly.demo.android.pa.uidemo.view.DotView
+    <com.oreilly.demo.android.pa.uidemo.view.DotView
         android:id="@+id/dots"
-        android:focusableInTouchMode="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/white"
+        android:focusableInTouchMode="true"
         />
-    
-  <LinearLayout
-      android:orientation="horizontal"
-      android:background="@color/grey"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/text1"
-        android:text="@string/defaultText"
-        android:focusable="false"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="0dp"
-        android:layout_weight="1"/>
+        android:background="@color/grey"
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/text2"
-        android:text="@string/defaultText"
-        android:focusable="false"
+        <EditText
+            android:id="@+id/text1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:focusable="false"
+            android:text="@string/defaultText"/>
+
+        <EditText
+            android:id="@+id/text2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:focusable="false"
+            android:text="@string/defaultText"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="0dp"
-        android:layout_weight="1"/>
-  </LinearLayout>
+        android:background="@color/dk_grey"
+        android:orientation="horizontal">
 
-  <LinearLayout
-      android:orientation="horizontal"
-      android:background="@color/dk_grey"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/labelRed"
+            android:textColor="@color/red"/>
 
-    <Button
-        android:id="@+id/button1"
-        android:text="@string/labelRed"
-        android:textColor="@color/red"
-        android:layout_height="wrap_content"
-        android:layout_width="0dp"
-        android:layout_weight="1"/>
-
-    <Button
-        android:id="@+id/button2"
-        android:text="@string/labelGreen"
-        android:textColor="@color/green"
-        android:layout_height="wrap_content"
-        android:layout_width="0dp"
-        android:layout_weight="1"/>
-  </LinearLayout>
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/labelGreen"
+            android:textColor="@color/green"/>
+    </LinearLayout>
 </LinearLayout>
