--- a/AndroidUIDemo/src/main/res/menu/simple_menu.xml
+++ b/AndroidUIDemo/src/main/res/menu/simple_menu.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_clear"
-          android:title="@string/menuClear"
-          />
+    <item
+        android:id="@+id/menu_clear"
+        android:title="@string/menuClear"
+        />
 
-<!-- ICS
-          android:icon="@drawable/trashcan"
-          android:showAsAction="ifRoom|withText"
-          />
- -->
+    <!-- ICS
+              android:icon="@drawable/trashcan"
+              android:showAsAction="ifRoom|withText"
+              />
+     -->
 </menu>
