--- a/AndroidUIDemo/src/main/res/layout/main.xml
+++ b/AndroidUIDemo/src/main/res/layout/main.xml
@@ -8,7 +8,7 @@
               android:gravity="center_horizontal"
               android:orientation="vertical">
 
-    <com.oreilly.demo.android.pa.uidemo.view.DotView
+    <edu.luc.etl.cs313.android.group3Game.view.DotView
         android:id="@+id/dots"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
