--- a/Group3Game/src/main/res/layout/main.xml
+++ b/Group3Game/src/main/res/layout/main.xml
@@ -40,26 +40,26 @@
             android:text="@string/defaultText"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/dk_grey"
-        android:orientation="horizontal">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/dk_grey"-->
+        <!--android:orientation="horizontal">-->
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/labelRed"
-            android:textColor="@color/red"/>
+        <!--<Button-->
+            <!--android:id="@+id/button1"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="@string/labelRed"-->
+            <!--android:textColor="@color/red"/>-->
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/labelGreen"
-            android:textColor="@color/green"/>
-    </LinearLayout>
+        <!--<Button-->
+            <!--android:id="@+id/button2"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="@string/labelGreen"-->
+            <!--android:textColor="@color/green"/>-->
+    <!--</LinearLayout>-->
 </LinearLayout>
