--- a/Group3Game/src/main/res/menu/simple_menu.xml
+++ b/Group3Game/src/main/res/menu/simple_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_clear"
-        android:title="@string/menuClear"
+        android:title="@string/resetOption"
         />
 
     <!-- ICS
